Colaboratory를 통해 생성됨

--- a/MF_기반_추천.ipynb
+++ b/MF_기반_추천.ipynb
@@ -5,7 +5,9 @@
     "colab": {
       "name": "MF 기반 추천",
       "provenance": [],
-      "authorship_tag": "ABX9TyOHTgfCwXmcNA6W2ITAcT+2",
+      "collapsed_sections": [],
+      "mount_file_id": "1sQqhyUDr5AOB9JxT0UiSITRqoQT0RjW5",
+      "authorship_tag": "ABX9TyOEqvmu6KLShaaC7Ftzzjna",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,15 +30,303 @@
       ]
     },
     {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "SE0SmhNuHjUY"
-      },
-      "outputs": [],
+      "cell_type": "markdown",
       "source": [
-        ""
+        "## 메모리 기반 알고리즘\n",
+        "\n",
+        "- 메모리에 있는 데이터를 계산해서 추천하는 방식\n",
+        "- 개별 사용자 데이터 집중\n",
+        "- 원래 데이터에 충실하게 사용\n",
+        "- 대규모 데이터에 느리게 반응\n",
+        "\n",
+        "## 모델 기반 알고리즘\n",
+        "\n",
+        "- 데이터로부터 미리 모델을 구성 후 필요 시 추천하는 방식\n",
+        "- 전체 사용자 패턴 집중\n",
+        "- 대규모 데이터에 빠르게 반응\n",
+        "- 모델 생성 과정 오래 걸림 "
+      ],
+      "metadata": {
+        "id": "19SyCN7PSCpF"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Matrix Factorization 방식의 원리 \n",
+        "\n",
+        "### SGD Stochastic Gradient Decent 를 사용한  MF 알고리즘\n",
+        "\n",
+        "1. 잠재 요인  K 선택\n",
+        "2. P, Q 행렬 초기화\n",
+        "3. 예측 평점 R_hat 계산\n",
+        "4. 실제 R 과 R_hat 간 오차 계산 및 P, Q 수정\n",
+        "5. 기존 오차 도달 확인 \n"
+      ],
+      "metadata": {
+        "id": "27u-TECSTH20"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### SGD 를 사용한 MF 기본 알고리즘"
+      ],
+      "metadata": {
+        "id": "Otoh8Zs1EJwu"
+      }
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 3,
+      "metadata": {
+        "id": "SE0SmhNuHjUY",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 424
+        },
+        "outputId": "cdd422af-2f5b-4653-9b80-e03ea7d72e94"
+      },
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/html": [
+              "\n",
+              "  <div id=\"df-82529e97-9376-475a-adde-b955bd39caeb\">\n",
+              "    <div class=\"colab-df-container\">\n",
+              "      <div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>user_id</th>\n",
+              "      <th>movie_id</th>\n",
+              "      <th>rating</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>0</th>\n",
+              "      <td>196</td>\n",
+              "      <td>242</td>\n",
+              "      <td>3</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>1</th>\n",
+              "      <td>186</td>\n",
+              "      <td>302</td>\n",
+              "      <td>3</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2</th>\n",
+              "      <td>22</td>\n",
+              "      <td>377</td>\n",
+              "      <td>1</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>3</th>\n",
+              "      <td>244</td>\n",
+              "      <td>51</td>\n",
+              "      <td>2</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>4</th>\n",
+              "      <td>166</td>\n",
+              "      <td>346</td>\n",
+              "      <td>1</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>...</th>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>99995</th>\n",
+              "      <td>880</td>\n",
+              "      <td>476</td>\n",
+              "      <td>3</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>99996</th>\n",
+              "      <td>716</td>\n",
+              "      <td>204</td>\n",
+              "      <td>5</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>99997</th>\n",
+              "      <td>276</td>\n",
+              "      <td>1090</td>\n",
+              "      <td>1</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>99998</th>\n",
+              "      <td>13</td>\n",
+              "      <td>225</td>\n",
+              "      <td>2</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>99999</th>\n",
+              "      <td>12</td>\n",
+              "      <td>203</td>\n",
+              "      <td>3</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "<p>100000 rows × 3 columns</p>\n",
+              "</div>\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-82529e97-9376-475a-adde-b955bd39caeb')\"\n",
+              "              title=\"Convert this dataframe to an interactive table.\"\n",
+              "              style=\"display:none;\">\n",
+              "        \n",
+              "  <svg xmlns=\"http://www.w3.org/2000/svg\" height=\"24px\"viewBox=\"0 0 24 24\"\n",
+              "       width=\"24px\">\n",
+              "    <path d=\"M0 0h24v24H0V0z\" fill=\"none\"/>\n",
+              "    <path d=\"M18.56 5.44l.94 2.06.94-2.06 2.06-.94-2.06-.94-.94-2.06-.94 2.06-2.06.94zm-11 1L8.5 8.5l.94-2.06 2.06-.94-2.06-.94L8.5 2.5l-.94 2.06-2.06.94zm10 10l.94 2.06.94-2.06 2.06-.94-2.06-.94-.94-2.06-.94 2.06-2.06.94z\"/><path d=\"M17.41 7.96l-1.37-1.37c-.4-.4-.92-.59-1.43-.59-.52 0-1.04.2-1.43.59L10.3 9.45l-7.72 7.72c-.78.78-.78 2.05 0 2.83L4 21.41c.39.39.9.59 1.41.59.51 0 1.02-.2 1.41-.59l7.78-7.78 2.81-2.81c.8-.78.8-2.07 0-2.86zM5.41 20L4 18.59l7.72-7.72 1.47 1.35L5.41 20z\"/>\n",
+              "  </svg>\n",
+              "      </button>\n",
+              "      \n",
+              "  <style>\n",
+              "    .colab-df-container {\n",
+              "      display:flex;\n",
+              "      flex-wrap:wrap;\n",
+              "      gap: 12px;\n",
+              "    }\n",
+              "\n",
+              "    .colab-df-convert {\n",
+              "      background-color: #E8F0FE;\n",
+              "      border: none;\n",
+              "      border-radius: 50%;\n",
+              "      cursor: pointer;\n",
+              "      display: none;\n",
+              "      fill: #1967D2;\n",
+              "      height: 32px;\n",
+              "      padding: 0 0 0 0;\n",
+              "      width: 32px;\n",
+              "    }\n",
+              "\n",
+              "    .colab-df-convert:hover {\n",
+              "      background-color: #E2EBFA;\n",
+              "      box-shadow: 0px 1px 2px rgba(60, 64, 67, 0.3), 0px 1px 3px 1px rgba(60, 64, 67, 0.15);\n",
+              "      fill: #174EA6;\n",
+              "    }\n",
+              "\n",
+              "    [theme=dark] .colab-df-convert {\n",
+              "      background-color: #3B4455;\n",
+              "      fill: #D2E3FC;\n",
+              "    }\n",
+              "\n",
+              "    [theme=dark] .colab-df-convert:hover {\n",
+              "      background-color: #434B5C;\n",
+              "      box-shadow: 0px 1px 3px 1px rgba(0, 0, 0, 0.15);\n",
+              "      filter: drop-shadow(0px 1px 2px rgba(0, 0, 0, 0.3));\n",
+              "      fill: #FFFFFF;\n",
+              "    }\n",
+              "  </style>\n",
+              "\n",
+              "      <script>\n",
+              "        const buttonEl =\n",
+              "          document.querySelector('#df-82529e97-9376-475a-adde-b955bd39caeb button.colab-df-convert');\n",
+              "        buttonEl.style.display =\n",
+              "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
+              "\n",
+              "        async function convertToInteractive(key) {\n",
+              "          const element = document.querySelector('#df-82529e97-9376-475a-adde-b955bd39caeb');\n",
+              "          const dataTable =\n",
+              "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
+              "                                                     [key], {});\n",
+              "          if (!dataTable) return;\n",
+              "\n",
+              "          const docLinkHtml = 'Like what you see? Visit the ' +\n",
+              "            '<a target=\"_blank\" href=https://colab.research.google.com/notebooks/data_table.ipynb>data table notebook</a>'\n",
+              "            + ' to learn more about interactive tables.';\n",
+              "          element.innerHTML = '';\n",
+              "          dataTable['output_type'] = 'display_data';\n",
+              "          await google.colab.output.renderOutput(dataTable, element);\n",
+              "          const docLink = document.createElement('div');\n",
+              "          docLink.innerHTML = docLinkHtml;\n",
+              "          element.appendChild(docLink);\n",
+              "        }\n",
+              "      </script>\n",
+              "    </div>\n",
+              "  </div>\n",
+              "  "
+            ],
+            "text/plain": [
+              "       user_id  movie_id  rating\n",
+              "0          196       242       3\n",
+              "1          186       302       3\n",
+              "2           22       377       1\n",
+              "3          244        51       2\n",
+              "4          166       346       1\n",
+              "...        ...       ...     ...\n",
+              "99995      880       476       3\n",
+              "99996      716       204       5\n",
+              "99997      276      1090       1\n",
+              "99998       13       225       2\n",
+              "99999       12       203       3\n",
+              "\n",
+              "[100000 rows x 3 columns]"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 3
+        }
+      ],
+      "source": [
+        "import os\n",
+        "import pandas as pd\n",
+        "import numpy as np\n",
+        "\n",
+        "base_src = 'drive/MyDrive/recommend'\n",
+        "u_data_src = os.path.join(base_src, 'u.data')\n",
+        "r_cols = ['user_id', 'movie_id', 'rating', 'timestamp']\n",
+        "ratings = pd.read_csv(u_data_src, sep='\\t',\n",
+        "                      names=r_cols, encoding='latin-1')\n",
+        "\n",
+        "# timestamp 제거 \n",
+        "ratings = ratings[['user_id', 'movie_id', 'rating']].astype(int)\n",
+        "\n",
+        "ratings"
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "class MF():\n",
+        "  def __init__(self, ratings, hyper_params):\n",
+        "    self.R = np.array(ratings)\n",
+        "    self.num_users, self.num_items = np.shape(self.R)\n",
+        "    self.K = hyper_params['K']\n",
+        "    self.alpha = hyper_params['alpha']\n",
+        "    self.beta = hyper_params['beta']\n",
+        "    self.interations = hyper_params['iterations']\n",
+        "    self.verbose = hyper_params['verbose']\n",
+        "\n",
+        "  def rmse(self):\n",
+        "    xs, ys = self.R.nonzero()\n",
+        "    self.predictions = []\n",
+        "    self.errors = [] \n"
+      ],
+      "metadata": {
+        "id": "EPSQp0EhE49u"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
