--- a/MF_기반_추천.ipynb
+++ b/MF_기반_추천.ipynb
@@ -844,10 +844,7 @@
     "  test_set = mf.set_test(ratings_test)\n",
     "  result = mf.test()\n",
     "  index.append(K)\n",
-    "  results.append(result)\n",
-    "\n",
-    "\n",
-    "\n"
+    "  results.append(result)"
    ]
   },
   {
