--- a/Surprise 패키지 사용.ipynb
+++ b/Surprise 패키지 사용.ipynb
@@ -2,11 +2,17 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "63ee1b7f",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "from surprise import BaselineOnly, KNNWithMeans, SVD, SVDpp, Dataset, accuracy, Reader\n",
+    "from surprise.model_selection import cross_validate, train_test_split\n",
+    "\n"
+   ]
   }
  ],
  "metadata": {
