--- a/딥러닝을적용한추천시스템.ipynb
+++ b/딥러닝을적용한추천시스템.ipynb
@@ -1184,7 +1184,7 @@
    "hash": "5148dbd1d0990a1c29e36173df2e2382953f242373eaf320dae2341ee5cbc7d2"
   },
   "kernelspec": {
-   "display_name": "Python 3.9.7 ('base')",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -1199,8 +1199,7 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.9.7"
-  },
-  "orig_nbformat": 4
+  }
  },
  "nbformat": 4,
  "nbformat_minor": 2
