--- a/협업필터링.ipynb
+++ b/협업필터링.ipynb
@@ -1,29 +1,10 @@
 {
-  "nbformat": 4,
-  "nbformat_minor": 0,
-  "metadata": {
-    "colab": {
-      "name": "협업필터링",
-      "provenance": [],
-      "collapsed_sections": [],
-      "mount_file_id": "1UxERwCe8ASlZRqcfp9ahhxpoWr4uj1fw",
-      "authorship_tag": "ABX9TyMJc5MA+tIwR9Hye+tMeCLn",
-      "include_colab_link": true
-    },
-    "kernelspec": {
-      "name": "python3",
-      "display_name": "Python 3"
-    },
-    "language_info": {
-      "name": "python"
-    }
-  },
   "cells": [
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
+        "colab_type": "text",
+        "id": "view-in-github"
       },
       "source": [
         "<a href=\"https://colab.research.google.com/github/sangjinsu/personalized-recommendation-system/blob/main/%ED%98%91%EC%97%85%ED%95%84%ED%84%B0%EB%A7%81.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
@@ -31,6 +12,9 @@
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "htAnUFxQg3Vh"
+      },
       "source": [
         "어떤 아이템에 대해 비슷한 취향을 가진 사람들은 다른 아이템에 대해서도 비슷한 취향을 가질 것이다.\n",
         "\n",
@@ -53,31 +37,28 @@
         "2. 추천 대상과 다른 사용자간 유사도 추출\n",
         "3. 추천 대상이 평가하지 않은 아이템에 대해 예상 평가값 계산\n",
         "4. 아이템 중 예상 평가값이 가장 높은 N개 추천 \n"
-      ],
-      "metadata": {
-        "id": "htAnUFxQg3Vh"
-      }
+      ]
     },
     {
       "cell_type": "code",
-      "execution_count": 15,
+      "execution_count": 5,
       "metadata": {
-        "id": "LL8-j0sp-r0z",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
+        "id": "LL8-j0sp-r0z",
         "outputId": "66a39a64-35dd-4b55-abba-6981c44d76b8"
       },
       "outputs": [
         {
-          "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "1.0168906646220623"
+              "1.0191514588846329"
             ]
           },
+          "execution_count": 5,
           "metadata": {},
-          "execution_count": 15
+          "output_type": "execute_result"
         }
       ],
       "source": [
@@ -86,7 +67,7 @@
         "import numpy as np\n",
         "from sklearn.model_selection import train_test_split\n",
         "\n",
-        "base_src = 'drive/MyDrive/recommend'\n",
+        "base_src = ''\n",
         "u_user_src = os.path.join(base_src, 'u.user')\n",
         "\n",
         "u_cols = ['user_id', 'age', 'sex', 'occupation', 'zip_code']\n",
@@ -159,6 +140,9 @@
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "KXUVTXtws8YF"
+      },
       "source": [
         "### 이웃을 고려한 CF\n",
         "\n",
@@ -166,20 +150,37 @@
         "1. K Nearest Neighbors 방법\n",
         "2. Thresholding 방법\n",
         "\n"
-      ],
-      "metadata": {
-        "id": "KXUVTXtws8YF"
-      }
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": 6,
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "lal5A8PntgOk",
+        "outputId": "7126b547-0658-44bc-f426-1f3366c0e559"
+      },
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "1.0099391859451443"
+            ]
+          },
+          "execution_count": 6,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
       "source": [
         "import os\n",
         "import pandas as pd\n",
         "import numpy as np\n",
         "from sklearn.model_selection import train_test_split\n",
         "\n",
-        "base_src = 'drive/MyDrive/recommend'\n",
+        "base_src = ''\n",
         "u_user_src = os.path.join(base_src, 'u.user')\n",
         "\n",
         "u_cols = ['user_id', 'age', 'sex', 'occupation', 'zip_code']\n",
@@ -267,30 +268,41 @@
         "score(CF_knn, neighbor_size=30)\n",
         "\n",
         "\n"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "lal5A8PntgOk",
-        "outputId": "7126b547-0658-44bc-f426-1f3366c0e559"
-      },
-      "execution_count": 31,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "1.0119390746662833"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 31
-        }
       ]
     },
     {
       "cell_type": "code",
+      "execution_count": 7,
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "hFjj93vSuLKQ",
+        "outputId": "2deb7819-af58-40df-e146-dbc877f2fe1b"
+      },
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "movie_id\n",
+              "1189                Prefontaine (1997)\n",
+              "1463                  Boys, Les (1997)\n",
+              "1656                Little City (1998)\n",
+              "1367                      Faust (1994)\n",
+              "12          Usual Suspects, The (1995)\n",
+              "1612           Leading Man, The (1996)\n",
+              "174     Raiders of the Lost Ark (1981)\n",
+              "408              Close Shave, A (1995)\n",
+              "1594                    Everest (1998)\n",
+              "1449            Pather Panchali (1955)\n",
+              "Name: title, dtype: object"
+            ]
+          },
+          "execution_count": 7,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
       "source": [
         "### 실제 주어진 사용자에 대해 추천을 받는 기능 구현\n",
         "rating_matrix = x_train.pivot(index='user_id', columns='movie_id', values='rating')\n",
@@ -318,55 +330,21 @@
         "  return recommendations\n",
         "\n",
         "recom_movie(user_id=1, n_items=10, neighbor_size=30)"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "hFjj93vSuLKQ",
-        "outputId": "2deb7819-af58-40df-e146-dbc877f2fe1b"
-      },
-      "execution_count": 35,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "movie_id\n",
-              "1467                 Saint of Fort Washington, The (1993)\n",
-              "1500                            Santa with Muscles (1996)\n",
-              "1189                                   Prefontaine (1997)\n",
-              "1449                               Pather Panchali (1955)\n",
-              "1656                                   Little City (1998)\n",
-              "1463                                     Boys, Les (1997)\n",
-              "114     Wallace & Gromit: The Best of Aardman Animatio...\n",
-              "1643                                    Angel Baby (1995)\n",
-              "1594                                       Everest (1998)\n",
-              "408                                 Close Shave, A (1995)\n",
-              "Name: title, dtype: object"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 35
-        }
       ]
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "d3WmrZtG1Efr"
+      },
       "source": [
         "### 최적의 이웃 크기 결정\n",
         "\n"
-      ],
-      "metadata": {
-        "id": "d3WmrZtG1Efr"
-      }
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "for neighbor_size in range(10, 70, 10):\n",
-        "  print(score(CF_knn, neighbor_size))"
-      ],
+      "execution_count": 8,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -374,24 +352,30 @@
         "id": "AB4mbAN7y4nq",
         "outputId": "5c542bf8-92a3-448f-cc00-baa7872bd3d8"
       },
-      "execution_count": 36,
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
-            "1.0266127449089613\n",
-            "1.0138315799905293\n",
-            "1.0119390746662833\n",
-            "1.0117634237466882\n",
-            "1.0120975491190853\n",
-            "1.012434717184331\n"
+            "1.0296971780308377\n",
+            "1.0120758679384685\n",
+            "1.0099391859451443\n",
+            "1.0101633158556151\n",
+            "1.010549526274457\n",
+            "1.0113106128194362\n"
           ]
         }
+      ],
+      "source": [
+        "for neighbor_size in range(10, 70, 10):\n",
+        "  print(score(CF_knn, neighbor_size))"
       ]
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "XSKGSG_L3ZvC"
+      },
       "source": [
         "### 사용자 평가 경향을 고려한 CF \n",
         "\n",
@@ -401,13 +385,30 @@
         "3. 평점 편차의 예측값 계산\n",
         "  - 평가값 = 평점편차  * 다른 사용자 유사도 \n",
         "4. 실제 예측값 = 평점편차 예측값 + 평점 평균 \n"
-      ],
-      "metadata": {
-        "id": "XSKGSG_L3ZvC"
-      }
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": 10,
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "mikIDBDy5NzZ",
+        "outputId": "cda01d02-bd99-47bb-ab28-d49a1877c47d"
+      },
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "0.9344024862487913"
+            ]
+          },
+          "execution_count": 10,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
       "source": [
         "import os\n",
         "import pandas as pd\n",
@@ -416,7 +417,7 @@
         "### 코사인 유사도를 계산하는 사이킷런 라이브러리\n",
         "from sklearn.metrics.pairwise import cosine_similarity\n",
         "\n",
-        "base_src = 'drive/MyDrive/recommend'\n",
+        "base_src = ''\n",
         "u_user_src = os.path.join(base_src, 'u.user')\n",
         "\n",
         "u_cols = ['user_id', 'age', 'sex', 'occupation', 'zip_code']\n",
@@ -508,40 +509,40 @@
         "  return prediction \n",
         "\n",
         "score(CF_knn_bias, 30)"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "mikIDBDy5NzZ",
-        "outputId": "cda01d02-bd99-47bb-ab28-d49a1877c47d"
-      },
-      "execution_count": 11,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "0.9419655707304331"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 11
-        }
       ]
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "D0UCi_gbU1w-"
+      },
       "source": [
         "### 그 외의 CF 정확도 개선 방법\n",
         "\n"
-      ],
-      "metadata": {
-        "id": "D0UCi_gbU1w-"
-      }
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "YgzMdvXYVoPo",
+        "outputId": "bae9d4e3-8c33-406d-8441-ffb73864af59"
+      },
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "0.9424209013514165"
+            ]
+          },
+          "execution_count": 2,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
       "source": [
         "import os\n",
         "import pandas as pd\n",
@@ -663,30 +664,13 @@
         "SIG_LEVEL = 3\n",
         "MIN_RATINGS = 10\n",
         "score(CF_knn_bias_sig, 30)"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "YgzMdvXYVoPo",
-        "outputId": "bae9d4e3-8c33-406d-8441-ffb73864af59"
-      },
-      "execution_count": 2,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "0.9424209013514165"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 2
-        }
       ]
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "_nbV9x6fOMu3"
+      },
       "source": [
         "### 사용자 기반 CF와 아이템 기반 CF\n",
         "\n",
@@ -704,13 +688,30 @@
         "데이터 크기가 적고 사용자에 대한 정보가 있는 경우 사용자 기반 CF 가 적절하다 \n",
         "\n",
         "데이터 크기가 크고 충분한 정보가 없는 경우 아이템 기반 CF가 적절하다\n"
-      ],
-      "metadata": {
-        "id": "_nbV9x6fOMu3"
-      }
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": 11,
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "2lYrkI0lQcsE",
+        "outputId": "160791fa-c876-4ab1-867c-0d01ce514aa6"
+      },
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "1.0163003637579802"
+            ]
+          },
+          "execution_count": 11,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
       "source": [
         "import os\n",
         "import pandas as pd\n",
@@ -719,7 +720,7 @@
         "### 코사인 유사도를 계산하는 사이킷런 라이브러리\n",
         "from sklearn.metrics.pairwise import cosine_similarity\n",
         "\n",
-        "base_src = 'drive/MyDrive/recommend'\n",
+        "base_src = ''\n",
         "u_user_src = os.path.join(base_src, 'u.user')\n",
         "\n",
         "u_cols = ['user_id', 'age', 'sex', 'occupation', 'zip_code']\n",
@@ -790,30 +791,13 @@
         "  return mean_rating\n",
         "\n",
         "score(CF_IBCF)"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "2lYrkI0lQcsE",
-        "outputId": "160791fa-c876-4ab1-867c-0d01ce514aa6"
-      },
-      "execution_count": 7,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "1.0135291176779169"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 7
-        }
       ]
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "DaV1_2v_Syiw"
+      },
       "source": [
         "### 추천 시스템의 성과측정지표\n",
         "\n",
@@ -831,10 +815,35 @@
         "  - 정밀도와 재현율의 조화 평균\n",
         "  - 범위 \n",
         "  - 정밀도와 재형율은 trade-off 관계 "
-      ],
-      "metadata": {
-        "id": "DaV1_2v_Syiw"
-      }
+      ]
     }
-  ]
+  ],
+  "metadata": {
+    "colab": {
+      "authorship_tag": "ABX9TyMJc5MA+tIwR9Hye+tMeCLn",
+      "collapsed_sections": [],
+      "include_colab_link": true,
+      "mount_file_id": "1UxERwCe8ASlZRqcfp9ahhxpoWr4uj1fw",
+      "name": "협업필터링",
+      "provenance": []
+    },
+    "kernelspec": {
+      "display_name": "Python 3",
+      "name": "python3"
+    },
+    "language_info": {
+      "codemirror_mode": {
+        "name": "ipython",
+        "version": 3
+      },
+      "file_extension": ".py",
+      "mimetype": "text/x-python",
+      "name": "python",
+      "nbconvert_exporter": "python",
+      "pygments_lexer": "ipython3",
+      "version": "3.9.7"
+    }
+  },
+  "nbformat": 4,
+  "nbformat_minor": 0
 }
